# irispy-client-revanced

./: README.md  pyproject.toml
iris/: __init__.py  cli.py
iris/bot/_internal/: iris.py
iris/decorators/: __init__.py
iris/kakaolink/: __init__.py
