[project]
name = "irispy-client-revanced"
version = "0.2.5"
description = "A modified version of the Iris bot client in Python"
authors = [{ name = "ponyobot", email = "admin@ponyobot.kr" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "requests",
    "websockets",
    "pillow",
    "httpx"
]

[project.urls]
Original = "https://github.com/dolidolih/irispy-client"
Repository = "https://github.com/ponyobot/irispy-client-revanced"

[project.scripts]
iris = "iris.cli:main"
